--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "mongoose": "^8.13.2"
   }
 }
