--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "uuid": "^11.1.0"
   }
 }
